--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit>=1.31.0
-pandas>=2.1.0
-python-docx>=0.8.11
-PyPDF2>=3.0.1
+streamlit>=1.28
+pandas>=2.0
 pdfplumber>=0.10.2
+PyPDF2>=3.0.1
+python-docx>=0.8.11
+requests>=2.31.0
+openpyxl>=3.1.2
+reportlab>=4.0.7
